--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
             color: #333333;
             border-radius: 5px;
         }
+        .content .category .subcategory {
+            background: #bddafa;
+            color: #333333;
+            border-radius: 5px;
+        }
 
         .content div {
             margin: 10px;
@@ -238,7 +243,10 @@
 
                     <div class="category">
                         Tools and Resources for Many Web-Centric Topics
-
+                        <div class="subcategory">
+                            Tools and Resources for Many Web-Centric Topics
+    
+                        </div>
                     </div>
                     <div class="category">
                         Tools and Resources for Many Web-Centric Topics
