--- a/index.html
+++ b/index.html
@@ -242,17 +242,27 @@
 
 
                     <div class="category">
-                        Tools and Resources for Many Web-Centric Topics
+                        <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#tools_for_IT220">Tools and Resources for Many Web-Centric Topics</a>
                         <div class="subcategory">
-                            Tools and Resources for Many Web-Centric Topics
-    
+                            <ul>
+                                <li>Summary chart of most useful resources</li>
+                                <li>Organizations</li>
+                                <li>Articles and Tutorials</li>
+                                <li>More Advanced Resources</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="category">
-                        Tools and Resources for Many Web-Centric Topics
-
+                    <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#tools_for_IT">Tools for many IT topics - not web specific</a>
+                    <div class="subcategory">
+                        <ul>
+                            <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#ftp_tools">FTP Utilities and PuTTY</a></li>
+                            <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#UNIX">UNIX/LINUX</a></li>  
+                            <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#GIT">GIT</a></li> 	 
+                            <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#TechNews">Tech News Sources</a></li>     
+                        </ul>
                     </div>
-
+                    </div>
 <!-- Adding a comment -->
 
 
