--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         a {
             color: #00359e;
         }
+        a:visited {
+        color: purple; 
+        }
 
         .bold-color {
 
