--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
 
         <section id="controls">
             <button class="control" tabindex="3" onclick="changeFont()">Read In Arial Font</button>
+            <span class="sr-only">
+                [Button disabled without javascript.]
+            </span>
         </section>
         <!-- Meta Data Section -->
 
@@ -271,17 +274,17 @@
             <!-- Author Information Section -->
             <section id="author-info">Author: Margaret Menzin
                 <a href="http://web.simmons.edu/%7Emenzin/" tabindex="5"><i class="fas fa-globe"> <span class="sr-only">
-                            Globe Icon: Link To Website
+                            [Globe Icon] Link To Website
                         </span></i></a>
                 <a href="http://www.x.com/msmenzin" tabindex="6"><i class="fab fa-x-twitter"> <span class="sr-only">
-                            X Twitter Icon: Link To M S Menzin on Twitter
+                            [Twitter Icon] Link To MSMenzin on Twitter
                         </span></i></a>
             </section>
 
         </section>
         <!-- Main Header Section -->
         <h1><i class="fas fa-book"> <span class="sr-only">
-                    Icon of a Book
+                    [Icon of a Book]
                 </span></i> Resources on Web-Centric Computing</h1>
         <!-- Subheader Section -->
         <section id="subheading">Including HTML5, CSS3, JavaScript, jQuery and Frameworks, AJAX, Mobile, XML, Web
@@ -304,7 +307,7 @@
             organized as Documentation and Books, Tutorials and Articles, Links and Other Resources.</p>
             <!-- Useful Tips -->
             <p><i class="fas fa-lightbulb"> <span class="sr-only">
-                        Icon of a Lightbulb: Helpful Tip!
+                        [Icon of a Lightbulb] Helpful Tip!
                     </span></i> I also find it very useful to use ctrl+f to find specific topics.</p>
         </section>
 
@@ -313,6 +316,9 @@
 
     <!-- Begin Table of Contents-->
     <nav id="top">
+        <span class="sr-only">
+            [Buttons disabled without javascript.]
+        </span>
         <button class="control" tabindex="7" onclick="expandAll()">Expand All</button>
         <button class="control" tabindex="8" onclick="collapseAll()">Collapse All</button>
         <section id="toc">
@@ -325,6 +331,11 @@
                 <button class="toc-cat" aria-expanded="false" onclick="toggleSection(this)">
                     <span class="topic">General Tools</span>
                 </button>
+
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>General Tools</h3>
+                </span>
 
                 <div class="content">
 
@@ -367,6 +378,11 @@
                 <button class="toc-cat" aria-expanded="false" onclick="toggleSection(this)">
                     <span class="topic">Client-Side Programming</span>
                 </button>
+
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>Client Side Programming</h3>
+                </span>
 
                 <div class="content">
                     <div class="category">
@@ -454,6 +470,11 @@
                         Including Usability</span>
                 </button>
 
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>Issues in Site and Page Design Including Usability</h3>
+                </span>
+
                 </h2>
                 <div class="content">
                     <div class="category">
@@ -513,6 +534,11 @@
                     <span class="topic">CSS or Cascading Style Sheets</span>
                 </button>
 
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>CSS or Cascading Style Sheets</h3>
+                </span>
+
                 <div class="content">
                     <div class="category">
                         <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Documentation_for_CSS_etc.">CSS
@@ -545,6 +571,11 @@
                 <button class="toc-cat" aria-expanded="false" onclick="toggleSection(this)">
                     <span class="topic">Javascript</span>
                 </button>
+
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>Javascript</h3>
+                </span>
 
                 <div class="content">
                     <div class="category">
@@ -639,6 +670,12 @@
                         Scripting</span>
                 </button>
 
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>Node.js, CGI and Server-Side
+                        Scripting</h3>
+                </span>
+
                 <div class="content">
                     <div class="category">
                         <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Node">Node.js</a></li><a
@@ -698,6 +735,12 @@
                     <span class="topic">XML, Web Services, and Related
                         Technologies</span>
                 </button>
+
+                <span class="sr-only">
+                    [Button disabled without javascript.]
+                    <h3>XML, Web Services, and Related
+                        Technologies</h3>
+                </span>
 
                 <div class="content">
                     <div class="category">
