--- a/index.html
+++ b/index.html
@@ -678,17 +678,13 @@
 
                 <div class="content">
                     <div class="category">
-                        <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Node">Node.js</a></li><a
-                            href="http://web.simmons.edu/~menzin/WebCentricResources.html#Node">
+                        <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Node">Node.js</a>
                     </div>
                 </div>
                 <div class="content">
                     <div class="category">
-                        </a><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Node"></a><a
-                            href="http://web.simmons.edu/~menzin/WebCentricResources.html#CGI">CGI</a> - see also Perl
+                        <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#CGI">CGI</a> - see also Perl
                     </div>
-
-
                 </div>
                 <div class="content">
                     <div class="category">
