--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         body {
             font-family: 'Nunito', sans-serif;
             line-height: 1.6;
-            background: #f4f4f4;
+            background: #dee2e6;
             color: #333;
             max-width: 800px;
             margin: 20px auto;
