--- a/index.html
+++ b/index.html
@@ -845,8 +845,8 @@
                     </div>
 
                     <div class="category">
-                        <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Other_web_technologies">Web
-                                2.0 and Other Related Web Technologies</a> </li>
+                        <a href="http://web.simmons.edu/~menzin/WebCentricResources.html#Other_web_technologies">Web
+                                2.0 and Other Related Web Technologies</a>
                         <div class="subcategory">
                             <ul>
                                 <li><a href="http://web.simmons.edu/~menzin/WebCentricResources.html#semantic">Semantic
